library/general/fieldvalidator/samples/field-validator/example_allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-field-allow
spec:
  ingressClassName: ingress-foo
  rules:
    - host: example-host.example.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx
              port:
                number: 80
